# oo-agent

./: .gitignore  README.md  agent.ini.example  pyproject.toml
deploy/linux/: install.sh  oo-agent.service
deploy/windows/: build.ps1  install.ps1  oo-agent-setup.cmd  oo-agent.iss  uninstall.ps1
docs/: PAYLOAD.md
oo_agent/: __init__.py  __main__.py  cli.py  lifecycle.py  plugin.py
oo_agent/buffer/: __init__.py  queue.py
oo_agent/collectors/: __init__.py  containers.py  cron.py  diskio.py  docker_state.py  fs.py  gpu_amd.py  gpu_nvidia.py  hardware.py  net.py  rapl.py  security.py  sensors_hwmon.py  sensors_lhm.py  smart.py  system.py  tcpconn.py
oo_agent/core/: config.py  hostinfo.py  log.py  rates.py  registry.py  scheduler.py  sdnotify.py
oo_agent/service/: __init__.py  windows_service.py
oo_agent/transport/: __init__.py  client.py  enroll.py  reclaim.py
