[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oo-agent"
version = "0.2.1"
description = "Lightweight cross-platform metrics collection agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9",
]

[project.optional-dependencies]
gpu = ["nvidia-ml-py>=12.535"]
docker = ["docker>=7.0"]
transport = ["httpx>=0.27"]
windows = [
    'HardwareMonitor>=1.0; platform_system == "Windows"',
    'pywin32>=306; platform_system == "Windows"',
]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
oo-agent = "oo_agent.cli:main"

[tool.setuptools.packages.find]
include = ["oo_agent*"]
